@@ -7,6 +7,9 @@ Next Release
 
 - Fixed the tests for memmon to import the correct module.
 
+- Apply patch from Sam Bartlett: processes which are not autostarted
+  have pid "0".  This was crashing memmon.
+
 0.5 (2009-05-24)
 
 - Added ``memmon`` script, originally bundled with supervisor and
